# routes/pizza.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { hasAllergens, hasFoodTypes, removefoodTypes, removeAllergens } from '../controllers/pizza';
+import { hasAllergens, hasFoodTypes, removefoodTypes, removeAllergens, getCalories, doubleIngredients } from '../controllers/pizza';
 
 const router = Router();
 
@@ -7,8 +7,8 @@ router.get('/allergens', hasAllergens);
 router.get('/foodtypes', hasFoodTypes);
 router.post('/removeallergens', removeAllergens);
 router.post('/removefoodtypes',removefoodTypes);
-// router.get('/',removeIngredients);
-// router.get('/',doubleIngredients);
+router.get('/:recipe/calories',getCalories);
+router.post('/',doubleIngredients);
 
 
 
