# swagger.json
@@ -23,7 +23,7 @@
 
 
     "paths": {
-      "/pizza/allergens": {
+      "/allergens": {
         "get": {
           "tags": ["Pizza"],
           "summary": "Validate if the recipes has allergens",
@@ -56,7 +56,7 @@
           }
         }
       },
-      "/pizza/foodtypes": {
+      "/foodtypes": {
         "get": {
           "tags": ["Pizza"],
           "summary": "Validate if the recipes has food types",
@@ -89,7 +89,7 @@
           }
         }
       },
-      "/pizza/removeallergens": {
+      "/removeallergens": {
         "post": {
           "tags": ["Pizza"],
           "summary": "Remove allergens",
@@ -114,7 +114,7 @@
           }
         }
       },
-      "/pizza/removefoodtypes": {
+      "/removefoodtypes": {
         "post": {
           "tags": ["Pizza"],
           "summary": "Remove fodd types",
@@ -134,6 +134,29 @@
               "description": "OK",
               "schema": {
                 "$ref": "#/definitions/hasFoodTypesResponse"
+              }
+            }
+          }
+        }
+      },
+      "/:recipe/calories": {
+        "get": {
+          "tags": ["Pizza"],
+          "summary": "Get pizza calories",
+          "parameters": [
+            {
+              "in": "path",
+              "name": "recipe",
+              "description": "",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/getCaloriesResponse"
               }
             }
           }
@@ -175,6 +198,13 @@
       },
       "hasFoodTypesResponse": {
         "type": "boolean"
+      },
+      "getCaloriesResponse": {
+        "properties": {
+          "calories": {
+            "type": "number"
+          }
+        }
       }
     }
 
